Archive2/16/00faebba228252/output
main.cpp: In function 'int main()':
main.cpp:10:14: error: no matching function for call to 'foo(int [5])'
     foo(array);
              ^
main.cpp:10:14: note: candidate is:
main.cpp:4:6: note: template<class T, long unsigned int N> void foo(T*)
 void foo(T array[N]) {
      ^
main.cpp:4:6: note:   template argument deduction/substitution failed:
main.cpp:10:14: note:   couldn't deduce template parameter 'N'
     foo(array);
              ^
